# colpali_mcp_server

./: Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  start_server.sh
src/colpali_server/: __init__.py  cleanup_gpu.py  cli.py  colpali_model.py  elasticsearch_model.py  image_rag_server.py  utils.py
tests/: __init__.py  complete_test.py  test_integration.py  test_list_tools.py  test_mcp_server.py  test_tool_calling.py  test_tools_structure.py  test_unit_simple.py
