[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colpali-server"
version = "1.0.0"
description = "Colpali MCP Server in Python"
authors = [{name = "Camille Barboule", email = "camille.barboule@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "colpali-engine (>=0.3.10,<0.4.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "elasticsearch (==8.18.1)",
    "pillow (>=11.2.1,<12.0.0)",
    "load-dotenv (>=0.1.0,<0.2.0)",
    "fastmcp (>=2.5.1,<3.0.0)"
]

[project.scripts]
colpali-server = "colpali_server.cli:main" 

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"


[tool.poetry.group.dev.dependencies]
types-pillow = "^10.2.0.20240822"
types-requests = "^2.32.0.20250515"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"